--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
     <!-- start section number-2 -->
 
     <section class="common-section-area">
-        <h1>My Mission in 2022</h1>
-        <div class="common-mission bg-color1">
-            <img src="images/illustrators/illustrator-1.png" alt=""  width="150" height="150">
+        <h1 class="h-mission">My Mission in <span class="h-color">2022</span> </h1>
+        <div class="common-mission bg-color1 ">
+            <img src="images/illustrators/illustrator-1.png" alt="" width="150" height="150">
             <h3>Mission</h3>
             <p>Amet minim mollit non deserunt
                 ullamco est sit aliqua dolor do amet
                 sint. Velit officia consequat duis enim
                 velit mollit</p>
         </div>
-        <div class="common-mission bg-color2" >
+        <div class="common-mission bg-color2">
             <img src="images/illustrators/illustrator-2.png" alt="" width="150" height="150">
             <h3>Vission</h3>
             <p>Amet minim mollit non deserunt
@@ -54,6 +54,14 @@
                 ullamco est sit aliqua dolor do amet
                 sint. Velit officia consequat duis enim
                 velit mollit</p>
+        </div>
+    </section>
+    <section>
+        <div>
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div>
+            
         </div>
     </section>
 
