--- a/index.html
+++ b/index.html
@@ -56,13 +56,17 @@
                 velit mollit</p>
         </div>
     </section>
-    <section>
-        <div>
-            <img src="images/pictures/coding.png" alt="">
+    <!--start Develop area -->
+    <section class="common-section-area bg-image">
+        <div class="develop-area">
+            <img src="images/pictures/coding.png" alt="" width="520px" height="400px">
         </div>
-        <div>
-            
+        <div class="develop-area">
+            <h1>Develop <br> Without Limits</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis quam consectetur aliquam totam illum facere? Voluptas inventore, doloremque iusto nesciunt porro debitis magni qui sapiente, eaque, dignissimos iure repellat vel?</p>
+            <a href="">Read the Documentation</a>
         </div>
+       
     </section>
 
 </body>
