--- a/index.html
+++ b/index.html
@@ -63,11 +63,34 @@
         </div>
         <div class="develop-area">
             <h1>Develop <br> Without Limits</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis quam consectetur aliquam totam illum facere? Voluptas inventore, doloremque iusto nesciunt porro debitis magni qui sapiente, eaque, dignissimos iure repellat vel?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis quam consectetur aliquam totam illum
+                facere? Voluptas inventore, doloremque iusto nesciunt porro debitis magni qui sapiente, eaque,
+                dignissimos iure repellat vel?</p>
             <a href="">Read the Documentation</a>
         </div>
-       
+
     </section>
+    <section class="common-section-area">
+        <div class="develop-area about-me">
+            <h1>Know our Global Community</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi optio, aperiam, voluptas neque officia
+                rem dolor a id amet similique possimus quisquam facere voluptate quo modi repellendus obcaecati
+                veritatis saepe?</p>
+            <a href="">Read the Documentation</a>
+        </div>
+        <div class="develop-area ">
+            <img src="images/pictures/project.png" alt="" width="520" height="400">
+        </div>
+    </section>
+    <!-- Start Optanal Section-->
+    <section>
+
+    </section>
+    <!-- Start Footer Section-->
+    <footer>
+        <h1> Mission <span class="footer-year-color"> 2022 </span></h1>
+        <small>Create by Hasan Sikder @ all right resive 2022</small>
+    </footer>
 
 </body>
 
