--- a/index.html
+++ b/index.html
@@ -16,44 +16,45 @@
     <section class="common-section-area">
         <div class="about-me">
             <h1 class="h-border ">Stay Focused on<br> <span class="h-color">Mission 2022</span> </h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quam eos reiciendis, voluptatum pariatur
-                voluptas commodi maiores voluptate nulla tempore quasi facilis dolor odit eum et, velit, laboriosam
-                molestiae officia?</p>
-            <a href="">Hire Me</a> <br><br><br>
-            <small>Scroll down to explore more about us</small>
+            <p>We have a full-time web developer, we will create a very interesting website for you. Here are some of the websites we create: Restaurant Management Website, Online E-Commerce Website, Multi Vendor Website, Hospital Management Website, and many more.</p>
+            <a href="https://github.com/hasansikder" target="_black">Hire Me</a> <br><br>
+            <small class="bio-info">Scroll down to explore more about me</small>
+             
         </div>
         <div class="about-me pic">
-            <img src="images/person/person-1.png" alt="">
+            <img src="images/person/person-1.png" alt="" width="400px" height="450px">
         </div>
     </section>
 
     <!-- start section number-2 -->
 
-    <section class="common-section-area">
+    <section class="mission-area">
         <h1 class="h-mission">My Mission in <span class="h-color">2022</span> </h1>
-        <div class="common-mission bg-color1 ">
-            <img src="images/illustrators/illustrator-1.png" alt="" width="150" height="150">
-            <h3>Mission</h3>
-            <p>Amet minim mollit non deserunt
-                ullamco est sit aliqua dolor do amet
-                sint. Velit officia consequat duis enim
-                velit mollit</p>
-        </div>
-        <div class="common-mission bg-color2">
-            <img src="images/illustrators/illustrator-2.png" alt="" width="150" height="150">
-            <h3>Vission</h3>
-            <p>Amet minim mollit non deserunt
-                ullamco est sit aliqua dolor do amet
-                sint. Velit officia consequat duis enim
-                velit mollit</p>
-        </div>
-        <div class="common-mission bg-color3">
-            <img src="images/illustrators/illustrator-3.png" alt="" width="150" height="150">
-            <h3>Goals</h3>
-            <p>Amet minim mollit non deserunt
-                ullamco est sit aliqua dolor do amet
-                sint. Velit officia consequat duis enim
-                velit mollit</p>
+        <div class="common-section-area">
+            <div class="common-mission bg-color1 ">
+                <img src="images/illustrators/illustrator-1.png" alt="" width="150" height="150">
+                <h3>Mission</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit</p>
+            </div>
+            <div class="common-mission bg-color2">
+                <img src="images/illustrators/illustrator-2.png" alt="" width="150" height="150">
+                <h3>Vission</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit</p>
+            </div>
+            <div class="common-mission bg-color3">
+                <img src="images/illustrators/illustrator-3.png" alt="" width="150" height="150">
+                <h3>Goals</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit</p>
+            </div>
         </div>
     </section>
     <!--start Develop area -->
@@ -63,20 +64,17 @@
         </div>
         <div class="develop-area">
             <h1>Develop <br> Without Limits</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis quam consectetur aliquam totam illum
-                facere? Voluptas inventore, doloremque iusto nesciunt porro debitis magni qui sapiente, eaque,
-                dignissimos iure repellat vel?</p>
-            <a href="">Read the Documentation</a>
+            <p>we are active 24/7, so if you face problems any time let me know we will be ready to solve your problem right away.</p>
+            <a href="https://github.com/hasansikder" target="_black">Read the Documentation</a>
         </div>
 
     </section>
     <section class="common-section-area">
         <div class="develop-area about-me">
             <h1>Know our Global Community</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi optio, aperiam, voluptas neque officia
-                rem dolor a id amet similique possimus quisquam facere voluptate quo modi repellendus obcaecati
-                veritatis saepe?</p>
-            <a href="">Read the Documentation</a>
+            <p>We have a strong full team, our team is always ready to provide 
+                different services for your company. We have developers from different departments such as web developer, mobile app developer, digital marketing, etc.</p>
+            <a href="https://github.com/hasansikder" target="_black">Read the Documentation</a>
         </div>
         <div class="develop-area ">
             <img src="images/pictures/project.png" alt="" width="520" height="400">
@@ -88,7 +86,7 @@
     </section>
     <!-- Start Footer Section-->
     <footer>
-        <h1> Mission <span class="footer-year-color"> 2022 </span></h1>
+        <h2> Mission <span class="footer-year-color"> 2022 </span></h2>
         <small>Create by Hasan Sikder @ all right resive 2022</small>
     </footer>
 
